--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "postcss-preset-env": "^6.7.0",
     "react": "17.0.1",
     "react-dom": "17.0.1",
+    "react-image-gallery": "^1.0.8",
     "tailwindcss": "^2.0.2"
   }
 }
