--- a/package.json
+++ b/package.json
@@ -8,6 +8,8 @@
     "start": "next start"
   },
   "dependencies": {
+    "dotenv": "^8.2.0",
+    "dropbox": "^8.2.0",
     "next": "10.0.4",
     "postcss": "^8.2.1",
     "postcss-preset-env": "^6.7.0",
