--- a/package.json
+++ b/package.json
@@ -11,11 +11,12 @@
     "dotenv": "^8.2.0",
     "dropbox": "^8.2.0",
     "next": "10.0.4",
-    "postcss": "^8.2.1",
     "postcss-preset-env": "^6.7.0",
     "react": "17.0.1",
     "react-dom": "17.0.1",
-    "react-image-gallery": "^1.0.8",
-    "tailwindcss": "^2.0.2"
+    "react-image-gallery": "^1.0.8"
+  },
+  "devDependencies": {
+    "sass": "^1.32.2"
   }
 }
