--- a/package.json
+++ b/package.json
@@ -13,12 +13,9 @@
     "next": "10.0.4",
     "postcss-preset-env": "^6.7.0",
     "react": "17.0.1",
-    "react-burger-menu": "^3.0.3",
     "react-dom": "17.0.1",
-    "react-image-gallery": "^1.0.8",
     "sass": "^1.32.4",
-    "styled-jsx": "^3.3.2",
-    "styled-jsx-plugin-sass": "^1.0.0"
+    "styled-jsx": "^3.3.2"
   },
   "devDependencies": {}
 }
